fix: center the answer box on tablet when results are centered (#4832)
When center alignment is enabled and screen width is between @phone and
@tablet, the #urls element gets a 3rem left margin but #answers does not,
causing the answer box to shift left relative to the rest of the results.

Added matching .ltr-margin-left(3rem) rule for #answers in the tablet
center-alignment media query.

--- a/client/simple/src/less/style-center.less
+++ b/client/simple/src/less/style-center.less
@@ -41,6 +41,10 @@ on the /search URL and when the "center alignment" preference is enabled.
       .ltr-margin-left(3rem);
     }
 
+    #answers {
+      .ltr-margin-left(3rem);
+    }
+
     #sidebar {
       .ltr-margin-right(1rem);
     }
